tomcat_mssql2019/templates/mssql2019-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fccmssqlsvc
  labels:
    app: fcctomcatmssql2019
    io.service: fcctomcatmssql
spec:
  type: ClusterIP
  selector:
    io.service: fcctomcatmssql
  ports:
  - port: 1433
    targetPort: 1433
#    nodePort: 31000
