tomcat_mssql2019/templates/tomcat-svc-mssql2019.yml
apiVersion: v1
kind: Service
metadata:
  name: fccapptomcatsvc
  labels:
    app: fcctomcatmssql2019
    io.service: fcctomcatmssql
spec:
  selector:
    io.service: fcctomcatmssql
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
status:
  loadBalancer: {}
